# BMC-CrossCompile

./: LICENSE  README.md  makeNewApplication.sh
hello/: hello.c
i2cipmi/: CMakeLists.original.txt  CMakeLists.txt  i2cipmi.c  location
ipmitest/: CMakeLists.txt  ipmitest.c
rwi2c/: CMakeLists.txt  README.md  i2cdetect-log.txt  rwi2c.c  rwi2c.c.practice
test/: CMakeLists.txt  build.sh
